# model-service-benchmark-python

./: README.md  dataset_definition.json  main.py  pyproject.toml  requirements.txt
